--- a/projects/calculator.html
+++ b/projects/calculator.html
@@ -12,9 +12,7 @@
     <!--font-awesome-version 4.7.0-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="../../ivan-qa/styles/main-style.css">
-    <link rel="stylesheet" type="text/css" href="../../ivan-qa/styles/projects.css">
-    <link rel="stylesheet" type="text/css" href="../../ivan-qa/styles/calculator.css">
+    <link rel="stylesheet" type="text/css" href="../../ivan-qa/styles/main.css">
 </head>
 
 <body id="top">
@@ -38,32 +36,33 @@
                 <!--header-->
                 <header>
                     <div class="person-info">
-                        <h1 class="name"><a href="../../ivan-qa/index.html"><i class="fa fa-user-o" aria-hidden="true"></i>Ivan
+                        <h1 class="name"><a href="../../ivan-qa/index.html"><i class="fa fa-user-o"
+                                    aria-hidden="true"></i>Ivan
                                 Gavrikov</a></h1>
                         <h2 class="position">QA Specialist</h2>
                     </div>
                 </header>
 
-            <!--nav-->
-            <nav class="top-nav">
-                <ul>
-                    <a href="../../ivan-qa/resume.html">
-                        <li>Resume</li>
-                    </a>
-                    <li>|</li>
-                    <a href="../../ivan-qa/projects.html">
-                        <li>Projects</li>
-                    </a>
-                    <li>|</li>
-                    <a href="https://github.com/g1f">
-                        <li>GitHub</li>
-                    </a>
-                    <li>|</li>
-                    <a href="../../ivan-qa/feedback.html">
-                        <li>Feedback</li>
-                    </a>
-                </ul>
-            </nav>
+                <!--nav-->
+                <nav class="top-nav">
+                    <ul>
+                        <a href="../../ivan-qa/resume.html">
+                            <li>Resume</li>
+                        </a>
+                        <li>|</li>
+                        <a href="../../ivan-qa/projects.html">
+                            <li>Projects</li>
+                        </a>
+                        <li>|</li>
+                        <a href="https://github.com/g1f">
+                            <li>GitHub</li>
+                        </a>
+                        <li>|</li>
+                        <a href="../../ivan-qa/feedback.html">
+                            <li>Feedback</li>
+                        </a>
+                    </ul>
+                </nav>
             </div>
         </div>
 
@@ -79,18 +78,18 @@
         </nav>
         <!--main-wrapper-->
         <div class="main-wrapper">
-        <!--main-section-->
-        <main class="main-section">
+            <!--main-section-->
+            <main class="main-section">
                 <section class="calculator">
                     <h2 id="calc-anchor"><a href="../../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <div class="calc-input-section">
+                    <article class="calc-input-section">
                         <h3>Enter a number</h3>
                         <input class="calc-num-input" type="text">
                         <div class="calc-notice-section">
                             <p id="calc-notice"></p>
                         </div>
-                    </div>
-                    
+                    </article>
+
                     <div class="calc-buttons-section">
                         <button class="btn-calc" id="btn-result-all">Result all</button>
                         <button class="btn-cancel-calc" id="btn-cancel">Cancel</button><br>
@@ -103,25 +102,33 @@
                     </div>
 
                     <h3>Result</h3>
-                    <div class="calc-result-section">
+                    <article class="calc-result-section">
 
-                        <img id="img-sqr"><p id="p-sqr"></p><br>
-                        <img id="img-cube"><p id="p-cube"></p><br>
-                        <img id="img-factorial"><p id="p-factorial"></p><br>
-                        <img id="img-sqr-root"><p id="p-sqr-root"></p><br>
-                        <img id="img-cube-root"><p id="p-sqr-cubic-root"></p><br>
-                        <img id="img-circle-length"><p id="p-circle-length"></p>    
-                    </div>
+                        <img id="img-sqr">
+                        <p id="p-sqr"></p><br>
+                        <img id="img-cube">
+                        <p id="p-cube"></p><br>
+                        <img id="img-factorial">
+                        <p id="p-factorial"></p><br>
+                        <img id="img-sqr-root">
+                        <p id="p-sqr-root"></p><br>
+                        <img id="img-cube-root">
+                        <p id="p-sqr-cubic-root"></p><br>
+                        <img id="img-circle-length">
+                        <p id="p-circle-length"></p>
+                    </article>
                     <script src="../../ivan-qa/scripts/calculator.js"></script>
-                </section>
-        </main>
 
-        <aside class="side-section">
-            <!--section-->
-            <section class="side-section-wrapper">
-            </section>
-        </aside>
-    </div>
+                </section>
+                
+            </main>
+
+            <aside class="side-section">
+                <!--section-->
+                <section class="side-section-wrapper">
+                </section>
+            </aside>
+        </div>
         <!--footer-->
         <footer class="footer">
             <!--footer-section-1-->
@@ -138,8 +145,8 @@
                 <!--footer-section-3-->
                 <li>
                     <h2>Follow Me</h2>
-                    <a href="https://www.linkedin.com/in/ivan-gavrikov-43a340234/" target="_blank"><i class="fa fa-linkedin"
-                            aria-hidden="true"></i>LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/ivan-gavrikov-43a340234/" target="_blank"><i
+                            class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn</a>
                 </li>
                 <!--footer-section-4-->
                 <li>
