Closed issues on 09-15-23
https://github.com/g1f/ivan-qa/issues/21
https://github.com/g1f/ivan-qa/issues/8
https://github.com/g1f/ivan-qa/issues/7

--- a/index.html
+++ b/index.html
@@ -213,6 +213,87 @@
                     </div>
                     
                 </section>
+
+                <section class="main-section-item">
+                    <div class="vendors-section">
+                        <h2>Companies and vendors</h2>
+                        <table>
+                            <tr>
+                                <td>Airbnb</td>
+                                <td>Amazon</td>
+                                <td>AMC</td>
+                                <td>Bally Sports</td>
+                            </tr>
+                            <tr>
+                                <td>BBC</td>
+                                <td>Bestbuy</td>
+                                <td >Carolina Herrera</td>
+                                <td>CBS</td>
+                            </tr>
+                            <tr>
+                                <td>Coinbase</td>
+                                <td >Disney</td>
+                                <td>Drizly</td>
+                                <td >Ebay</td>
+                            </tr>
+                            <tr>
+                                <td >ESPN</td>
+                                <td>Ferrari</td>
+                                <td >Foxsport</td>
+                                <td>Good Path</td>
+                            </tr>
+                            <tr>
+                                <td>Google</td>
+                                <td >Grubhub</td>
+                                <td>IKEA</td>
+                                <td >Jackpot</td>
+                            </tr>
+                            <tr>
+                                <td >LineLeap</td>
+                                <td>Local Now</td>
+                                <td >Loreal</td>
+                                <td>McDonalds</td>
+                            </tr>
+                            <tr>
+                                <td>Meta (Facebook)</td>
+                                <td >Metal Pay</td>
+                                <td>MLB</td>
+                                <td >Moncler</td>
+                            </tr>
+                            <tr>
+                                <td >NBA</td>
+                                <td>NFL</td>
+                                <td >Nike</td>
+                                <td>NVIDIA</td>
+                            </tr>
+                            <tr>
+                                <td>Outsystems</td>
+                                <td >Paramount+</td>
+                                <td>Payoneer</td>
+                                <td >PeacockTV</td>
+                            </tr>
+                            <tr>
+                                <td >PlutoTV</td>
+                                <td>q5id</td>
+                                <td >Revolut</td>
+                                <td>Sandbox</td>
+                            </tr>
+                            <tr>
+                                <td>Slack</td>
+                                <td >Smashburber</td>
+                                <td>The Walt Disney Company</td>
+                                <td >The Weather Company</td>
+                            </tr>
+                            <tr>
+                                <td >Wahed</td>
+                                <td>Walmart</td>
+                                <td >Wayfair</td>
+                                <td>Western Union</td>
+                            </tr>
+
+                        </table>
+                    </div>
+                </section>
             </main>
 
         </div>
