--- a/projects.html
+++ b/projects.html
@@ -77,41 +77,40 @@
             <main class="main-section">
                 <section class="main-section-item">
                     <div class="meta">
-                        <h3 id="my_test_activities"><i class="fa fa-suitcase" aria-hidden="true"></i>My Test Activities
+                        <h3 id="my_test_activities"><i class="fa fa-suitcase" aria-hidden="true"></i>My QA Activities
                         </h3>
-                        <p>There are examples of my test cases, bug reports and tools I use daily.</p>
+                        <p>This section is related to the common aspects, technologies and other activities in Quality Assurance I use daily.</p>
                     </div>
 
                     <article class="article-section">
-                        <h4>Test strategy & Test Plan</h4>
+                        <h4>Test Artefacts</h4>
+                        <p>This list is not comprehensive, but includes main software testing artefacts.</p>
                         <ul>
                             <li><a href="../ivan-qa/projects/test-strategy.html">
-                                    What is Test Strategy?
+                                Test Strategy
                                 </a>
                             </li>
                             <li><a href="../ivan-qa/projects/test-plan.html">
-                                    What is Test Plan?
+                                Test Plan
                                 </a>
                             </li>
-                        </ul>
-                    </article>
-
-                    <article class="article-section">
-                        <h4>Test cases & Bug Reports</h4>
-                        <ul>
                             <li><a href="../ivan-qa/projects/test-case.html">
-                                    Test case (with my examples)
+                                Test Case (with examples)
                                 </a>
                             </li>
                             <li><a href="../ivan-qa/projects/bug-report.html">
-                                    Bug report (with my examples)
+                                Bug Report (with examples)
                                 </a>
                             </li>
+                            <li><a href="../ivan-qa/projects/test-report.html">
+                                Test Report
+                            </a>
+                        </li>
                         </ul>
                     </article>
 
                     <article class="article-section">
-                        <h4>API Test Examples</h4>
+                        <h4>API Testing</h4>
                         <ul>
                             <li><a href="#">
                                     Some API examples.
@@ -121,7 +120,7 @@
                     </article>
 
                     <article class="article-section">
-                        <h4>Cypress Examples</h4>
+                        <h4>Cypress Framework</h4>
                         <ul>
                             <li><a href="#">
                                     Some Cypress examples.
@@ -139,18 +138,6 @@
                             </li>
                         </ul>
                     </article>
-
-                    <article class="article-section">
-                        <h4>Companies and vendors</h4>
-                        <ul>
-                            <li><a href="#">
-                                    There is a list of companies and vendors I tested.
-                                </a>
-                            </li>
-                        </ul>
-                    </article>
-
-                    
 
                 </section>
 
@@ -283,7 +270,7 @@
                 <h3>Navigation</h3>
 
                 <ul class="side-section-nav">
-                    <li><a href="#my_test_activities" rel="my_test_activities">My Test Activities</a></li>
+                    <li><a href="#my_test_activities" rel="my_test_activities">My QA Activities</a></li>
                     <li><a href="#my_simple_calculator" rel="my_simple_calculator">My Simple Calculator</a></li>
                     <li><a href="#useful_qa_articles" rel="useful_qa_articles">Useful QA Articles</a></li>
                 </ul>
