--- a/index.html
+++ b/index.html
@@ -227,68 +227,103 @@
                             <tr>
                                 <td>BBC</td>
                                 <td>Bestbuy</td>
-                                <td >Carolina Herrera</td>
+                                <td>BlueAir</td>
+                                <td>Carolina Herrera</td>
+                            </tr>
+                            <tr>
                                 <td>CBS</td>
+                                <td>CircleK</td>
+                                <td>CNET</td>
+                                <td>Coach</td>
                             </tr>
                             <tr>
                                 <td>Coinbase</td>
-                                <td >Disney</td>
-                                <td>Drizly</td>
-                                <td >Ebay</td>
+                                <td>Deep Insctinct</td>
+                                <td>Discovery</td>
+                                <td>Disney</td>
                             </tr>
                             <tr>
-                                <td >ESPN</td>
+                                <td>Ebay</td>
+                                <td>ESPN</td>
                                 <td>Ferrari</td>
-                                <td >Foxsport</td>
+                                <td>FOX</td>
+                            </tr>
+                            <tr>
+                                <td>Foxsport</td>
+                                <td>Gametime</td>
                                 <td>Good Path</td>
-                            </tr>
-                            <tr>
                                 <td>Google</td>
-                                <td >Grubhub</td>
+                            </tr>
+                            <tr>
+                                <td>Grubhub</td>
+                                <td>HBO Max</td>
+                                <td>Headroom</td>
                                 <td>IKEA</td>
-                                <td >Jackpot</td>
                             </tr>
                             <tr>
-                                <td >LineLeap</td>
+                                <td>Jackpot</td>
+                                <td>Kate Spade</td>
+                                <td>LineLeap</td>
                                 <td>Local Now</td>
-                                <td >Loreal</td>
+                            </tr>
+                            <tr>
+                                <td>L'Oreal</td>
+                                <td>Luxxotica</td>
                                 <td>McDonalds</td>
+                                <td>Meta - Facebook</td>
                             </tr>
                             <tr>
-                                <td>Meta (Facebook)</td>
-                                <td >Metal Pay</td>
+                                <td>Metal Pay</td>
                                 <td>MLB</td>
-                                <td >Moncler</td>
+                                <td>Moncler</td>
+                                <td>Nat Geo TV</td>
                             </tr>
                             <tr>
-                                <td >NBA</td>
+                                <td>NBA</td>
                                 <td>NFL</td>
-                                <td >Nike</td>
+                                <td>NFL - Clubs</td>
+                                <td>Nike</td>
+                            </tr>
+                            <tr>
                                 <td>NVIDIA</td>
-                            </tr>
-                            <tr>
+                                <td>OP3N</td>
                                 <td>Outsystems</td>
-                                <td >Paramount+</td>
-                                <td>Payoneer</td>
-                                <td >PeacockTV</td>
+                                <td>Paramount+</td>
                             </tr>
                             <tr>
-                                <td >PlutoTV</td>
-                                <td>q5id</td>
-                                <td >Revolut</td>
+                                <td>Payoneer</td>
+                                <td>PeacockTV</td>
+                                <td>Petco</td>
+                                <td>PlutoTV</td>
+                            </tr>
+                            <tr>
+                                <td>Q5ID</td>
+                                <td>Ralph Lauren</td>
+                                <td>Revolut</td>
                                 <td>Sandbox</td>
                             </tr>
                             <tr>
+                                <td>ShopRite</td>
                                 <td>Slack</td>
-                                <td >Smashburber</td>
-                                <td>The Walt Disney Company</td>
-                                <td >The Weather Company</td>
+                                <td>Spotify</td>
+                                <td>Square Enix</td>
                             </tr>
                             <tr>
-                                <td >Wahed</td>
+                                <td>The Walt Disney Company</td>
+                                <td>The Weather Company</td>
+                                <td>Tj Maxx</td>
+                                <td>Trulioo</td>
+                            </tr>
+                            <tr>
+                                <td>W3LL</td>
+                                <td>Wahed</td>
                                 <td>Walmart</td>
-                                <td >Wayfair</td>
-                                <td>Western Union</td>
+                                <td>Wayfair</td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">Western Union</td>
+                                <td>World Remit</td>
+                                <td>WWE</td>
                             </tr>
 
                         </table>
