--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Ivan Gavrikov &#8211; Resume</title>
@@ -31,22 +31,16 @@
                 <h3 class="position">Quality Assurance Specialist</h3>
                 <div class="contact-links">
                     <ul>
-                        <a href="https://goo.gl/maps/3FqSAC1h4vJd8n4b8" target="_blank">
-                            <li><i class="fa fa-map-marker" aria-hidden="true"></i>Houston, Texas, United States</li>
-                        </a>
+                        <li><a href="https://goo.gl/maps/3FqSAC1h4vJd8n4b8" rel="external"><i class="fa fa-map-marker" aria-hidden="true"></i>Houston, Texas, United States</a></li>
                         <li><i class="fa fa-phone" aria-hidden="true"></i>346-804-3464</li>
-                        <a href="mailto: gifvan@gmail.com" target="_blank">
-                            <li><i class="fa fa-envelope-o" aria-hidden="true"></i></i>gifvan@gmail.com</li>
-                        </a>
-                        <a href="https://www.linkedin.com/in/ivan-gavrikov-43a340234/" target="_blank">
-                            <li><i class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn</li>
-                        </a>
+                        <li><a href="mailto:gifvan@gmail.com" rel="external"><i class="fa fa-envelope-o" aria-hidden="true"></i>gifvan@gmail.com</a></li>
+                        <li><a href="https://www.linkedin.com/in/ivan-gavrikov-43a340234/" rel="external"><i class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn</a></li>
                     </ul>
                 </div>
                 <a href="https://drive.google.com/file/d/1B89uaxtLg-ft4AOk9uoTrA8Ba74SRWhc/view?usp=sharing"
-                    class="btn-simple" target="_blank">Resume in PDF</a>
+                    class="btn-simple" rel="external">Resume in PDF</a>
             </div>
-            <a href="index.html"><img class="avatar" src="../ivan-qa/images/avatar.jpg" width="180px"
+            <a href="index.html"><img class="avatar" src="../ivan-qa/images/avatar.jpg" width="180"
                     alt="Avatar of Ivan Gavrikov"></a>
         </header>
         <!--main-wrapper-->
@@ -244,14 +238,16 @@
                         </p>
                         <ul class="job-info-list">
                             <li>prepared design project documentation for:</li>
-                            <p class="nested-p">
-                                - construction of fiber optic cable lines (FOCL) using FTTH/GPON technology in Moscow
-                                and Moscow region;<br>
-                                - tie-ins and reconfiguration of current cable lines for Orange Business Services
-                                (French telecommunication company);<br>
-                                - construction of transport interchange hubs using GPON technology;
-                                - construction of the Intelligent Traffic System (ITS) in Moscow;
-                            </p>
+                            <li>
+                                <ul>
+                                    <li>- construction of fiber optic cable lines (FOCL) using FTTH/GPON technology in Moscow
+                                    and Moscow region;</li>
+                                    <li>- tie-ins and reconfiguration of current cable lines for Orange Business Services
+                                    (French telecommunication company);</li>
+                                    <li>- construction of transport interchange hubs using GPON technology;</li>
+                                    <li>- construction of the Intelligent Traffic System (ITS) in Moscow;</li>
+                                </ul>
+                            </li>
                             <li>calculated the quantities from design project documentation and checked the cost
                                 estimates;</li>
                             <li>interacted with contractors;</li>
@@ -290,7 +286,7 @@
                         <h3 class="job-title">ASTQB - ISTQB in the U.S.</h3>
                         <div class="date">Issued March 2023</div>
                         <span>Certified Tester, Foundation Level</span><br>
-                        <a id="edu-link"
+                        <a class="edu-link"
                             href="https://atsqa.org/certified-testers/profile/3b520564c334430d8180bfbdf45a9f30">Credential
                             ID 23-CTFL-00766-USA</a>
                     </div>
@@ -302,24 +298,24 @@
                     <div class="meta">
                         <h3 class="job-title">Udemy</h3>
                         <div class="date">Issued Sept 2022</div>
-                        <a id="edu-link"
-                            href="https://udemy-certificate.s3.amazonaws.com/image/UC-9a870c08-70a1-40cb-ad1f-8a633e09f4ec.jpg?v=1664399788000"
-                            target="_blank">ISTQB Foundation Level 2022 Complete Training</a>
+                        <a class="edu-link"
+                            href="https://udemy-certificate.s3.amazonaws.com/image/UC-9a870c08-70a1-40cb-ad1f-8a633e09f4ec.jpg?v=1664399788000" rel="external">
+                            ISTQB Foundation Level 2022 Complete Training</a>
                     </div>
                     <!--course-->
                     <div class="meta">
                         <h3 class="job-title">Coursera</h3>
                         <div class="date">Issued June 2022</div>
-                        <a id="edu-link"
-                            href="https://drive.google.com/file/d/1FEw7gt9UCG9SbDLNrx5JTaYHEABX4SDq/view?usp=sharing"
-                            target="_blank">Atlassian Jira</a>
+                        <a class="edu-link"
+                            href="https://drive.google.com/file/d/1FEw7gt9UCG9SbDLNrx5JTaYHEABX4SDq/view?usp=sharing" rel="external">
+                            Atlassian Jira</a>
                     </div>
                     <div class="meta">
                         <h3 class="job-title">Coursera</h3>
                         <div class="date">Issued May 2022</div>
-                        <a id="edu-link"
-                            href="https://drive.google.com/file/d/1DeEdkewy_R1OeQbcyeJcJwiS-ovyLsH_/view?usp=sharing"
-                            target="_blank">Introdution to User Experience Design</a>
+                        <a class="edu-link"
+                            href="https://drive.google.com/file/d/1DeEdkewy_R1OeQbcyeJcJwiS-ovyLsH_/view?usp=sharing" rel="external">
+                            Introdution to User Experience Design</a>
                     </div>
                 </section>
             </main>
@@ -335,7 +331,7 @@
                 <!--section-->
                 <section class="side-section-item">
                     <div class="side-lang">
-                        <h2><i class="fa fa-language" aria-hidden="true"></i></i>Languages</h2>
+                        <h2><i class="fa fa-language" aria-hidden="true"></i>Languages</h2>
                         <h4>English</h4>
                         <span class="lang-desc">Professional working proficiency</span>
                     </div>
