--- a/feedback.html
+++ b/feedback.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Ivan Gavrikov &#8211; Feedback</title>
@@ -44,20 +44,20 @@
             <!--nav-->
             <nav class="top-nav">
                 <ul>
-                    <li><a href="../ivan-qa/resume.html">Resume</li></a>
+                    <li><a href="../ivan-qa/resume.html">Resume</a></li>
 
                     <li>|</li>
 
-                    <li><a href="../ivan-qa/projects.html">Projects</li></a>
+                    <li><a href="../ivan-qa/projects.html">Projects</a></li>
 
                     <li>|</li>
 
                     <li><a href="https://github.com/g1f">GitHub</a></li>
-                    
+
                     <li>|</li>
 
-                    <li><a href="../ivan-qa/feedback.html">Feedback</li></a>
-                    
+                    <li><a href="../ivan-qa/feedback.html">Feedback</a></li>
+
                 </ul>
             </nav>
             </div>
@@ -68,7 +68,7 @@
         <!--main-section-->
         <main class="main-section">
             <div class="feedback-from">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc3whH_pCvyIXKvzsydwKMiUzQO_eIc90XYBUZ0lm65LCuuPQ/viewform?embedded=true" width="640" height="2740px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc3whH_pCvyIXKvzsydwKMiUzQO_eIc90XYBUZ0lm65LCuuPQ/viewform?embedded=true" width="640" height="2740"></iframe>
             </div>
         </main>
         </div>
@@ -84,7 +84,7 @@
                 <!--footer-section-2-->
                 <li>
                     <h2><i class="fa fa-envelope-o" aria-hidden="true"></i>Email</h2>
-                    <a href="mailto: gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
+                    <a href="mailto:gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
                 </li>
                 <!--footer-section-3-->
                 <li>
