--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Ivan Gavrikov &#8211; Projects</title>
@@ -45,11 +45,11 @@
                 <!--nav-->
                 <nav class="top-nav">
                     <ul>
-                        <li><a href="../ivan-qa/resume.html">Resume</li></a>
+                        <li><a href="../ivan-qa/resume.html">Resume</a></li>
 
                         <li>|</li>
 
-                        <li><a href="../ivan-qa/projects.html">Projects</li></a>
+                        <li><a href="../ivan-qa/projects.html">Projects</a></li>
 
                         <li>|</li>
 
@@ -57,7 +57,7 @@
 
                         <li>|</li>
 
-                        <li><a href="../ivan-qa/feedback.html">Feedback</li></a>
+                        <li><a href="../ivan-qa/feedback.html">Feedback</a></li>
 
                     </ul>
                 </nav>
@@ -67,7 +67,7 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="../ivan-qa/index.html">Main</a></li>
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
                 <li>Projects</li>
             </ul>
         </nav>
@@ -77,7 +77,7 @@
             <main class="main-section">
                 <section class="main-section-item">
                     <div class="meta">
-                        <h3 id="my_test_activities"><i class="fa fa-suitcase" aria-hidden="true"></i>My QA Activities
+                        <h3 id="my_test_activity"><i class="fa fa-suitcase" aria-hidden="true"></i>My QA Activity
                         </h3>
                         <p>This section is related to the common aspects, technologies and other activities in Quality Assurance I use daily.</p>
                     </div>
@@ -110,44 +110,46 @@
                     </article>
 
                     <article class="article-section">
-                        <h4>API Testing</h4>
+                        <h4>Examples</h4>
                         <ul>
                             <li><a href="#">
-                                    Some API examples.
+                                API
                                 </a>
+                            </li>
+                            <li><a href="#">
+                                Cypress
+                            </a>
+                        </li>
+                        </ul>
+                    </article>
+
+                    <article class="article-section">
+                        <h4>Tools</h4>
+                        <ul>
+                            <li><a href="../ivan-qa/projects/nu-HTML-checker.html">
+                                Nu HTML Checker
+                                </a> - an article how to check your website for issues with HTML tags
+                            </li>
+                            <li><a href="https://xenus-link-sleuth.en.softonic.com/">
+                                Xenu’s Link Sleuth<i class="fa fa-external-link"
+                                aria-hidden="true"></i>
+                                </a> - checks for broken links on websites
+                            </li>
+                            <li><a href="https://openvas.org/">
+                                OpenVAS<i class="fa fa-external-link"
+                                aria-hidden="true"></i>
+                                </a> - is a full-featured vulnerability scanner
                             </li>
                         </ul>
                     </article>
 
                     <article class="article-section">
-                        <h4>Cypress Framework</h4>
-                        <ul>
-                            <li><a href="#">
-                                    Some Cypress examples.
-                                </a>
-                            </li>
-                        </ul>
-                    </article>
-
-                    <article class="article-section">
-                        <h4>Exploratory testing</h4>
-                        <ul>
-                            <li><a href="#">
-                                    Some methods that help me to test the functionality of the software.
-                                </a>
-                            </li>
-                        </ul>
-                    </article>
-
-                </section>
-
-                <section class="main-section-item">
-                    <div class="meta">
-                        <h3 id="my_simple_calculator"><i class="fa fa-calculator" aria-hidden="true"></i>My Simple
-                            Calculator</h3>
+                        <h4 id="simple_calculator"><i class="fa fa-calculator" aria-hidden="true"></i>Simple
+                            Calculator</h4>
                         <p><a href="../ivan-qa/projects/calculator.html">There is an example of my simple calculator
                                 written on JavaScript.</a></p>
-                    </div>
+                        </article>
+
                 </section>
 
                 <section class="main-section-item">
@@ -157,6 +159,20 @@
                         <p>There are some useful articles which can be used to gain or refresh your current experience
                             and knowledge.</p>
                     </div>
+
+                    <article class="article-section">
+                        <h4>Standards</h4>
+                        <ul>
+                            <li><a href="https://html.spec.whatwg.org/">
+                                HTML Living Standard<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                            </li>
+                            <li><a href="https://www.w3.org/WAI/standards-guidelines/">
+                                    W3C Accessibility Standards<i class="fa fa-external-link" aria-hidden="true"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </article>
 
                     <article class="article-section">
                         <h4>Roadmaps</h4>
@@ -176,29 +192,37 @@
                     </article>
 
                     <article class="article-section">
-                        <h4>Standarts</h4>
-                        <ul>
-                            <li><a href="https://www.w3.org/WAI/standards-guidelines/">
-                                    W3C Accessibility Standards<i class="fa fa-external-link" aria-hidden="true"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </article>
-
-                    <article class="article-section">
-                        <h4>Checklists</h4>
+                        <h4>Checklists & Cheatsheets</h4>
                         <ul>
                             <li><a href="https://www.guru99.com/complete-web-application-testing-checklist.html">
                                     Test Cases Example for Web Application<i class="fa fa-external-link"
                                         aria-hidden="true"></i>
                                 </a>
                             </li>
-                            </a>
                             <li><a
                                     href="https://www.softwaretestinghelp.com/sample-test-cases-testing-web-desktop-applications/">
                                     180+ Web Application Testing Example Test Cases<i class="fa fa-external-link"
                                         aria-hidden="true"></i>
                                 </a>
+                            </li>
+                            <li><a
+                                href="https://github.com/mfaisalkhatri/Manual_Testing/">
+                                GitHub - mfaisalkhatri - Manual Testing<i class="fa fa-external-link"
+                                    aria-hidden="true"></i>
+                            </a>
+                            </li>
+
+                            <li><a
+                                href="https://cheatsheetseries.owasp.org/cheatsheets/XSS_Filter_Evasion_Cheat_Sheet.html">
+                                XSS Filter Evasion Cheat Sheet<i class="fa fa-external-link"
+                                    aria-hidden="true"></i>
+                            </a>
+                            </li>
+                            <li><a
+                                href="https://pentestmonkey.net/cheat-sheet/sql-injection/mysql-sql-injection-cheat-sheet">
+                                MySQL SQL Injection Cheat Sheet<i class="fa fa-external-link"
+                                    aria-hidden="true"></i>
+                            </a>
                             </li>
                         </ul>
                     </article>
@@ -211,9 +235,34 @@
                                         aria-hidden="true"></i>
                                 </a>
                             </li>
+
+                            <li><a href="https://www.softwaretestinghelp.com/web-services-tutorial/">
+                                Web Services Tutorial: Components, Architecture, Types & Examples<i class="fa fa-external-link"
+                                    aria-hidden="true"></i>
+                                </a>
+                            </li>
+
+                            <li><a href="https://github.com/DannyDainton">
+                                GitHub - DannyDainton - Senior SDET<i class="fa fa-external-link"
+                                    aria-hidden="true"></i>
+                                </a>
+                            </li>
+
+                            <li><a href="https://developer.twitter.com/en">
+                                Twitter API - Documentation for Developers<i class="fa fa-external-link"
+                                    aria-hidden="true"></i>
+                                </a>
+                            </li>
+
                             <li><a href="https://developer.spotify.com/documentation/web-api">
-                                    Spotify Web API - Documentation for Developers<i class="fa fa-external-link"
+                                    Spotify API - Documentation for Developers<i class="fa fa-external-link"
                                         aria-hidden="true"></i>
+                                </a>
+                            </li>
+
+                            <li><a href="https://openweathermap.org/api">
+                                Weather API - Documentation for Developers<i class="fa fa-external-link"
+                                    aria-hidden="true"></i>
                                 </a>
                             </li>
                         </ul>
@@ -247,6 +296,22 @@
                     </article>
 
                     <article class="article-section">
+                        <h4>Security</h4>
+                        <ul>
+                            <li><a href="https://owasp.org/">
+                                    OWASP Guide<i class="fa fa-external-link"
+                                        aria-hidden="true"></i>
+                                </a>
+                            </li>
+                            <li><a href="https://www.isecom.org/">
+                                The Institute for Security and Open Methodologies (ISECOM)<i class="fa fa-external-link"
+                                    aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        </ul>
+                    </article>
+
+                    <article class="article-section">
                         <h4>Databases</h4>
                         <ul>
                             <li><a href="https://www.sqlservertutorial.net/sql-server-basics/">
@@ -270,8 +335,8 @@
                 <h3>Navigation</h3>
 
                 <ul class="side-section-nav">
-                    <li><a href="#my_test_activities" rel="my_test_activities">My QA Activities</a></li>
-                    <li><a href="#my_simple_calculator" rel="my_simple_calculator">My Simple Calculator</a></li>
+                    <li><a href="#my_test_activity" rel="my_test_activity">My QA Activity</a></li>
+                    <li><a href="#simple_calculator" rel="simple_calculator">Simple Calculator</a></li>
                     <li><a href="#useful_qa_articles" rel="useful_qa_articles">Useful QA Articles</a></li>
                 </ul>
             </aside>
@@ -288,7 +353,7 @@
                 <!--footer-section-2-->
                 <li>
                     <h2><i class="fa fa-envelope-o" aria-hidden="true"></i>Email</h2>
-                    <a href="mailto: gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
+                    <a href="mailto:gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
                 </li>
                 <!--footer-section-3-->
                 <li>
